# object_detection_server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api_obj_detection.php  build_cppfile.sh  filedrop.js  index.html  obj_detection.cpp  obj_detection.php
haarcascades/: haarcascade_cat.xml
object_detection_main/: obj_detection.cpp
vender/OpenCVjs/javascript/: opencv.js
vender/OpenCVjs/javascript/module/: core.js
